midia quary compleated

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                   our newsletter.
                 </p>
                 <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                  <input type="text" class="form-control" placeholder="Enter your email address....." aria-label="Enter your email address....." aria-describedby="button-addon2">
                   <button 
                   class="btn btn-outline-secondary" type="button" id="button-addon2"
                   >SUBSCRIBE
@@ -544,7 +544,7 @@
             items:1
         },
         600:{
-            items:2
+            items:1
          },
         1000:{
             items:3
